# emos

./: Cargo.toml  log.txt  readme.md  running.txt
.cargo/: config.toml
kernel/: Cargo.toml
src/: capabilities.rs  context.S  gdt.rs  interactive_tests.rs  interrupts.rs  ipc.rs  lib.rs  main.rs  process.rs  scheduler.rs  serial.rs  simple_tests.rs  syscalls.rs  tests.rs  userspace.rs
src/process/: context.rs  mod.rs  pcb.rs  scheduler.rs
src/services/: file_system_service.rs  keyboard_service.rs  memory_service.rs  mod.rs  process_service.rs  vga_service.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
