[package]
name = "emos"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
kernel = { path = "./kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = { version = "0.11", default-features = false, features = ["uefi"] }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"




[[bin]]
name = "emos"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"